# exr-diff

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  format-all.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt  colormap.hpp  colortools.hpp  main.cpp
src/ColorMap/: BBGRColorMap.hpp  ColorMap.hpp  ColorMapModule.hpp  TabulatedColorMap.hpp
src/ImageFormat/: EXRImageFormat.hpp  ImageModule.hpp  XYZImage.hpp
tests/: CMakeLists.txt  test_diff.cpp
